Sun Nov 28 15:57:58 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::Element#tag): not use block_given? for
	  working with ruby 1.6 again.

	* lib/rss/{0.9,2.0,trackback}.rb, lib/rss/maker/base.rb:
	  undef -> remove_method for working with ruby 1.6 again.

Sun Nov 28 15:51:40 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::NotSetError): added.
	
	* lib/rss/maker/{1.0,0.9,2.0}.rb: changed RSS Maker to raise
	  RSS::NotSetError if required values of maker.channel are not
	  set. [ruby-talk:120061]

	* test/rss/test_maker_{1.0,0.9,2.0}.rb: changed tests to check RSS
	  Maker raises or not.

Sun Nov 28 12:14:47 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c (fetch_token): fixed test failure on HP-UX ia64
	([ruby-dev:24859]).

Sun Nov 28 12:08:15 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regparse.c, test/ruby/test_regexp.rb: fixed problem with UTF-8
	characters that have U+00FE or invalid characters.

Sun Nov 28 12:07:04 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regexec.c, test/ruby/test_regexp.rb: fixed segmentation falut
	([ruby-dev:24887]).

Sun Nov 28 12:05:48 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* regcomp.c, regint.h: fixed PLATFORM_UNALIGNED_WORD_ACCESS
	problem ([ruby-dev:24802] and [ruby-core:3733])

Sat Nov 27 21:43:39 2004  Tanaka Akira  <akr@m17n.org>

	* io.c: avoid data lost with nonblocking fd and
	  stdio buffering in sync mode.  [ruby-dev:24966]
	  based on matz's patch [ruby-dev:24967]
	  (io_fwrite): new primitive writing function which writes
	  directly if sync mode.
	  (rb_io_fwrite): wrapper for io_fwrite now.
	  (io_write): call io_fwrite instead of rb_io_fwrite.

Sat Nov 27 17:43:21 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/{0.9,1.0,2.0,trackback,xml-stylesheet}.rb: added
	  #setup_maker.
	
	* test/rss/test_setup_maker_*.rb: added tests for #setup_maker.

	* lib/rss/maker/base.rb(RSS::Maker::Items#max_size=): supported
	  output item size limitation.
	